# raylib-game-template

./: CMakeLists.txt  ConanWrapper.cmake  README.md  build.bat  build.sh  clean_and_build.sh  conanfile.txt
conan_profiles/: gcc10_x64_linux.profile  vs2008_x86.profile  vs2017_x64.profile  vs2019_x64.profile
src/: .clang-format  CMakeLists.txt  raylib_game.c
src/resources/: LICENSE  fazzb__-_4000.mod
